CORNER FRAMEWORK
===========================================
http://www.bjmaxinfo.com 

changes in version 2.3 	(unreleased)
------------------------------------------
package corner.widget
* 纠正TextAreaBox的rows和cols的错误.
package corner.orm.tapestry.validator
* 加入了PersonID的validator.
package corner.orm.tapestry.component
* 纠正MatrixRowField编辑时候的Number format错误。
* 调整MatrixRowHead也采用Input的方式来显示元素.

changes in version 2.2.2 	(2006-10-29)
------------------------------------------
package corner.widget
* 升级dojo到0.4版本
* 升级tapestry到最新（1027）的版本
* 纠正应为升级dojo带来的js错误
* 纠正TextAreaBox的js错误（dojo的升级）

package corner.util
* 加入对货币的四舍五入操作（CurrencyUtil）.
* 加入了减法、除法的操作.

package corner.orm.tapestry.validator
* 加入了实体是否存在的validator。

package corner.orm.tapestry.component
* 加入了MatrixRowField和MatrixHead两个组件，实现二维表格的处理.
* Selector的样式设定，从Tapestry的组件中移动到js中处理.
* 提出AbstractSelectFilter方法里面的getLabelField,供子类调用.
* AbstractSelectFilter实现ISelectFilter接口。
* 删除DefaultSelectFilter的接口ISelectFilter,采用抽象的父类
* component下面几个java文件均过期，采用select下面新的组件。
* 加入AutoCompleter的更新多个字段的操作。
* RowField组件增加对input的样式自定义

package corner.orm.tapestry.page
* AbstractEntityPage 中加入保存blob的操作方法.
* 修改AbstractEntityPage方法，加入参数IfNullDelete,当blob为空时，是否删除该实体.


changes in version 2.2.1 	(2006-10-17)
------------------------------------------
package corner.orm.tapestry.component
* 加入新版本的自动完成组件的model类.
* 加入单一实体选取一个字段的AutoCompleter.
