@@ -11,6 +11,9 @@ package corner.orm.tapestry.validator
 package corner.orm.tapestry.component
 * 纠正MatrixRowField编辑时候的Number format错误。
 * 调整MatrixRowHead也采用Input的方式来显示元素.
+package corner.orm.hibernate
+* 删除expression表达式的antlr方式，采用新版本的正则表达式。
+
 
 changes in version 2.2.2 	(2006-10-29)
 ------------------------------------------
